Removed supercheckbox.js and font to try to prevent reload on ios load.

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,10 +1,3 @@
-@font-face {
-  font-family: 'Oleo Script Swash Caps';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Oleo Script Swash Caps'), local('OleoScriptSwashCaps-Regular'), url(http://themes.googleusercontent.com/static/fonts/oleoscriptswashcaps/v1/vdWhGqsBUAP-FF3NOYTe4pakf2VKGDa1aHLWGf__tlnr7w4p9aSvGirXi6XmeXNA.woff) format('woff');
-}
-
 body,
 input {
 		font-family: arial, sans-serif;
